<resources>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Sample Android Design Support Library App</string>
    <string name="floating_labels">Floating Labels</string>
    <string name="fab">Floating Action Button</string>
    <string name="snackbar">Snackbar</string>
    <string name="tabs">Tabs</string>
    <string name="coordinator">Coordinator Layout</string>
    <string name="app_name">UMP Doctor app</string>
    <string name="ump_version_num">Version : 1.0.3 Build 20180619</string>
    <string name="access_code_example">hcsffu</string>
    <string name="access_code_medical">Medical</string>
    <string name="access_code_dental">&#160;&#160;Dental&#160;</string>
    <string name="access_code_caption_msg">Exclusively used by UMP corporate clients or insurance members.</string>
    <string name="login_check_version">A new version is available for download. Would you like to update now?</string>
    <string name="login_check_reminder">Version Update</string>
    <string name="language_zh">中</string>
    <string name="language_en">ENG</string>
    <string name="login_download_full">Full</string>
    <string name="login_download_update">Updates\nOnly</string>
    <string name="check_sum_data_not_match">Server Side Error</string>
    <string name="medical_scheme">\nMedical Scheme</string>
    <string name="last_data_sync_time">Last Updated:</string>
    <string name="disclaimer_warn">You have to agree with disclaimer</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="procedure_title">Procedure</string>
    <string name="disclaimer_startup">Startup Disclaimer\nStartup Disclaimer\nStartup Disclaimer\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\n</string>
    <string name="disclaimer_important_notes_previous">Previous Page</string>
    <string name="disclaimer_agree">Agree</string>
    <string name="disclaimer_disagree">Disagree</string>
    <string name="disclaimer_ok">OK</string>
    <string name="disclaimer_cancel">Cancel</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="network_title">No Internet Connection</string>
    <string name="network_go_on">Latest data cannot be downloaded and updated. Would you like to continue?</string>
    <string name="network_unavailable">Please check your Internet connection.</string>
    <string name="language_switch_text">Language</string>
    <string name="downlaod_text">Download</string>
    <string name="language_switch_on">Chinese</string>
    <string name="language_switch_off">English</string>
    <string name="access_code_text">Access Code</string>
    <string name="access_code_hint">00000000</string>
    <string name="access_code_btn_text">Login</string>
    <string name="access_code_empty">Please input valid Panel Doctor List Access Code!</string>
    <string name="access_code_invalid">Invalid Code</string>
    <string name="access_code_not">No data found</string>
    <string name="main_temp_info">Access Code</string>
    <string name="info_corporate_scheme_btn">Corporate Scheme</string>
    <string name="info_optional_scheme_btn">Optional Scheme</string>
    <string name="cms_progress_dialog_title">Loading</string>
    <string name="full_download_dialog_msg"> Full download requires more data usage and time to finish, but ensures data integrity. Would you like to continue?</string>
    <string name="full_download_new_dialog_msg"> New access code needs a full download, which will require more data and time to finish. Would you like to continue?</string>
    <string name="full_download_new_app_dialog_msg"> New app version needs a full download, which will require more data and time to finish. Would you like to continue?</string>
    <string name="cms_progress_dialog_msg">Please wait, downloading and updating data &#8230;</string>
    <string name="cms_update_success">Update Success</string>
    <string name="cms_update_fail">Updating Fail</string>
    <string name="general_scheme">General Scheme</string>
    <string name="language_switch_btn_text">English</string>
    <string name="downloading_title">Download</string>
    <string name="downloading_text">Downloading data&#8230;</string>
    <string name="doctor_detail_frag_workhour_text">Opening Hours</string>
    <string name="doctor_detail_frag_map_btn">Map</string>
    <string name="doctor_detail_frag_phone_btn">Call</string>
    <string name="doctor_detail_frag_share_btn">Share Via</string>
    <string name="doctor_detail_frag_share_email">E-mail</string>
    <string name="doctor_detail_frag_share_whatsapp">WhatsApp</string>
    <string name="doctor_detail_emailshare_app">Send E-mail</string>
    <string name="doctor_detail_frag_share_cancel">Cancel</string>
    <string name="google_map_toast">UMP Google Map Toast</string>
    <string name="google_map_title">Google Map</string>
    <string name="google_map_searching">Searching Address&#8230;</string>
    <string name="google_map_no_position_found_toast">Can not find this address</string>
    <string name="invalid_phone_num">Invalid Phone Num</string>
    <string name="doctor_detail_frag_share_sms">SMS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_doctorlist">Doctor List</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_esubmission">ESubmissionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="system_setting">Setting</string>
    <string name="show_tutorial_at_start">Show tutorial at start</string>
    <string name="show_tutorial_zh">Show</string>
    <string name="show_tutorial_en">No Show</string>
    <string name="hong_kong_region">Hong Kong</string>
    <string name="china_region">China</string>
    <string name="macau_region">Macau</string>
    <string name="home_title">Home</string>
    <string name="doctor_list_title">Doctor List</string>
    <string name="non_network_claims">Non-network Claims</string>
    <string name="setting_title">Setting</string>
    <string name="login_instruction">"Login "</string>
    <string name="eclaim_login_disclaimer">Exclusively used by UMP designated clients or insurance members.</string>
    <string name="scheme_code">Scheme Code</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="declaration_and_service_coverage">Declaration and Authorization</string>
    <string name="UMP_Membership_No">Staff’s UMP Membership No.</string>
    <string name="validate_required_scheme_code">Please enter Scheme Code</string>
    <string name="please_enter_first_four_hkid">Please enter first four characters of your HKID as Password.</string>
    <string name="please_select">Please select</string>
    <string name="select_patient">Select Claimant</string>
    <string name="select_type_of_claim">Select Type of Claim</string>
    <string name="change_claim_type_alert_message">Change type of claim will remove selected photo</string>
    <string name="currency_of_the_receipt">Currency of the Receipt</string>
    <string name="total_amount_of_the_receipt">Total Amount of the Receipt</string>
    <string name="have_referral_letter_question">Do you have referral letter for this claim?</string>
    <string name="submitted_referral_letter_question">Have you ever submitted \nreferral letter for the same treatment\nwithin 180 days prior to the consultation day?</string>
    <string name="photo_of_receipt">Photo of the receipt (For this claim request)</string>
    <string name="photo_of_claim_settlement">Photo of the Claim settlement Advice from the insurer (For this claim request)</string>
    <string name="photo_of_referral_letter">Photo of the referral letter (For this claim request)</string>
    <string name="esubmission_title">eSubmission</string>
    <string name="CTF">CHOW TAI FOOK JEWELLERY CO LTD</string>
    <string name="disclaimer_statement">Part 1\nI acknowledge and understand that:\n(1) the use of the eSubmission service and any and all functions at  the eSubmission service shall at all times governed by the Terms and Conditions hereunder; and\n(2) this eSubmission service is maintained by UMP and all personal data uploaded by using this eSubmission service shall be subject to the Personal Data (Privacy) Ordinance (Cap.486) of the laws of Hong Kong.\n\nI further confirm that, by using the eSubmission service, in the event that I am submitting a claim on behalf of my dependent (18 years of age or over), I have received the dependent’s authorization and consent on his/her behalf:\n(1) to submit the claim and to provide all the personal data and information included in the claim to UMP; and\n(2) to submit supporting documentation to UMP for the claim,\n\nAnd I am solely responsible for the truth and accuracy of all personal data, information and documentation submitted by me.\n\nPart 2\nI hereby irrevocably authorize UMP to obtain and retain the record and information  of my (or my dependent’s) employment, sick leave records, accident or loss details (of any sorts), health and medical history or any treatment or advice that has been or may hereafter be consulted.  I hereby further agree and authorize any organization, institution or individual to disclose and/or transfer any of the aforesaid record and information to UMP and this authorization shall bind my successors and assignees and remain valid in so far as legally possible notwithstanding my death or incapacity. A photocopy of this authorization shall be as valid as the original.\n\nI understand that “Submit eSubmission application” is for claim assessment process. The claim will not be considered as completed until UMP has completed the entire claim process of the claim application.\n\nPart 3\nI understand and acknowledge that, for the purpose of auditing any of my/my dependent’s successful eSubmission application, UMP may from time to time request me or my dependent to provide any or all original receipt(s) and supporting document(s) of the corresponding medical treatment/ service received (“the Original Documents”).  I undertake and agree to submit the Original Documents to UMP as soon as practicable upon receiving such request from UMP, failing which, the claim may be considered as untrue, fake or misleading, UMP reserves all the rights including but not limited to reject and decline any further eSubmission application from me or my dependent, and I hereby indemnify and hold UMP harmless for any cost, expenses, loss and damage incurred therefrom.\n\n\nThese terms and conditions shall be governed by and construed in accordance with the laws of Hong Kong and subject to the exclusive jurisdiction of Hong Kong courts.\n\nBy using this eSubmission service, I confirm that I have read, understood and accepted the above terms and conditions.</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="declaration_title">Declaration and Authorization</string>
    <string name="membercard_b_submit">SUBMIT</string>
    <string name="voucher_clearsign">CLEAR</string>
    <string name="voucher_tab1">Add Queue</string>
    <string name="voucher_tab2">Medical Voucher Record</string>
    <string name="doctorapp_doctor_sign">Doctor Signs here</string>
    <string name="doctorapp_main_doctorsigntemplate">Doctor Signature Template</string>
</resources>