<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ump.doctorlist.fragment.esubmission.TakePictureFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/main_title_background"
        android:orientation="horizontal">

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/system_setting"
            style="@style/mytextview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/esubmission_title"
            android:textIsSelectable="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="vertical">


        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipe_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/photo_of_receipt" />

            <ListView
                android:id="@+id/recipe_picture_list_view"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <TextView
                android:id="@+id/claim_settlement_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/photo_of_claim_settlement" />

            <ListView
                android:id="@+id/claim_settlement_list_view"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <RelativeLayout
                android:id="@+id/have_referral_letter_question_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/have_referral_letter_question_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:maxLines="4"
                    android:text="@string/have_referral_letter_question" />

                <Switch
                    android:id="@+id/have_referral_letter_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <TextView
                android:id="@+id/referral_letter_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/photo_of_referral_letter" />

            <ListView
                android:id="@+id/referral_letter_list_view"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <RelativeLayout
                android:id="@+id/submitted_referral_letter_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/submitted_referral_letter_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:maxLines="4"
                    android:text="@string/submitted_referral_letter_question" />

                <Switch
                    android:id="@+id/submitted_referral_letter_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_layout_height"
        android:background="@android:color/transparent"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_button"
            style="@style/textview_white"
            android:layout_width="@dimen/btn_width_small"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ump_normal_btn"
            android:gravity="center"
            android:text="@string/previous_button"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/next_button"
            style="@style/textview_white"
            android:layout_width="@dimen/btn_width_small"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@drawable/ump_normal_btn"
            android:gravity="center"
            android:text="@string/next_button"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>