<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/rl_doctorapp_topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_layout_height"
        android:background="@drawable/main_title_background"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/margin_small"
            android:background="@drawable/back_home_btn"
            android:contentDescription="@string/app_name" />
        <Button
            android:layout_toRightOf="@+id/back_btn"
            android:id="@+id/b_membercard_testingactivity"
            android:text="TestingActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_membercard_toptitle"
            style="@style/mytextview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/back_btn"
            android:layout_alignBottom="@+id/back_btn"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="UMP Doctor App"
            android:textIsSelectable="true"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="vertical" >
            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            </android.support.v7.widget.Toolbar>

        </LinearLayout>
    </RelativeLayout>


    <android.support.design.widget.TabLayout
android:id="@+id/voucher_tabLayout"
android:layout_width="match_parent"
android:layout_height="54dp"
android:alpha="0.5"
android:background="@color/black"
android:orientation="horizontal"
app:tabBackground="@color/black"
app:tabGravity="fill"
app:tabIndicatorColor="@color/tab_indicator_blue"
app:tabIndicatorHeight="4dp"
app:tabMaxWidth="0dp"
app:tabMode="fixed"
app:tabSelectedTextColor="@color/white"
app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget" >
<android.support.design.widget.TabItem
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/voucher_tab1" />

<android.support.design.widget.TabItem
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/voucher_tab2" />
</android.support.design.widget.TabLayout>

<android.support.v4.view.ViewPager
android:id="@+id/voucher_main_contents"
android:layout_width="match_parent"
android:layout_height="0dp"
android:layout_weight="1"
android:background="@drawable/page_background"
app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

<LinearLayout
android:id="@+id/banner_layout"
android:layout_width="match_parent"
android:layout_height="@dimen/banner_height"
android:background="@color/transparent"
android:orientation="horizontal"
    android:visibility="gone">

<ImageView
    android:id="@+id/banner_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/transparent"
    android:contentDescription="@string/app_name"
    android:scaleType="fitXY"
    android:src="@drawable/banner_hh_tc"
    android:visibility="visible"/>
</LinearLayout>

</LinearLayout>
